--- a/client/views/calendar.html
+++ b/client/views/calendar.html
@@ -19,7 +19,7 @@
                 </div>
                 <form name="newEvent" class="form-horizontal">
                     <fieldset>
-
+                      <input type="hidden" name="timezone">
                         <div class="control-group">
                             <label class="control-label">Title</label>
                             <div class="controls">
